--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -13,4 +13,8 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Attributes.Vital.Mana",DevComment="Resource used to cast spells")
 +GameplayTagList=(Tag="Attributes.Vital.MaxHealth",DevComment="Maximum amount of health the character can have")
 +GameplayTagList=(Tag="Attributes.Vital.MaxMana",DevComment="Maximum mana a character can have")
++GameplayTagList=(Tag="Message.HealthCrystal",DevComment="")
++GameplayTagList=(Tag="Message.HealthPotion",DevComment="")
++GameplayTagList=(Tag="Message.ManaCrystal",DevComment="")
++GameplayTagList=(Tag="Message.ManaPotion",DevComment="")
 
